# Christine

./: .gitignore  .project  .pydevproject  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  bugsChristine  christine  christine-module-tester.py  christine.c  christine.desktop.in  christine.in  christine.py  christine_setup.py  configure  configure.ac  createCheckinstallPackage.sh  createDeb.sh.in  libtool  mkinstalldirs  trans  upload.sh
build_win32/: christine.nsh  christine.nsi  setup.py
christinetests/: __init__.py  christineConf.py  christineNotify.py  customButtons.py  dbustest.py  mainLibrary.py  unittests.py
cplugins/: Makefile.am  plugin1.py  show_properties.py
doc/images/: classes.dia
extras/: rola_christine.py
gui/: About.glade  Error.glade  FileSelector.glade  JumpTo.glade  Makefile  Makefile.am  Makefile.in  MenuTrayIcon.glade  NewRadioDialog.glade  NewSourceDialog.glade  PopupMenu.glade  Preferences.glade  Properties.glade  SourcesList.glade  TreeViewReorderable.glade  TreeViewSources.glade  WindowCore.glade  about.glade  about.gladep  addFiles.glade  add_files.glade  add_files.gladep  deleteFileFromDisk.glade  deleteQuestion.glade  delete_file_from_disk_dialog.glade  dir_selector.glade  dir_selector.gladep  directorySelector.glade  equalizer.glade  errorReporter.glade  file_selector.gladep  genericQuestion.glade  gtkrc  icon_view.glade  icon_view.gladep  jump_to.glade  jump_to.gladep  mainWindow.glade  main_window.glade  main_window.gladep  (+18 more)
gui/icons/: Makefile  Makefile.am  Makefile.in
gui/icons/scalable/: Makefile  Makefile.in
gui/icons/scalable/actions/: Makefile  Makefile.in
gui/icons/scalable/apps/: Makefile  Makefile.in
gui/icons/scalable/mimetypes/: Makefile  Makefile.am  Makefile.in
gui/icons/scalable/status/: Makefile  Makefile.am  Makefile.in
gui/icons/size/: Makefile.am
gui/icons/size/scalable/: Makefile.am
gui/icons/size/scalable/actions/: Makefile.am
gui/icons/size/scalable/apps/: Makefile.am
gui/icons/size/scalable/mimetypes/: Makefile.am
gui/pixmaps/: Makefile  Makefile.am  Makefile.in
lib_christine/: Christine.py  Christine.py.in  Discoverer.py  Display.py  Makefile.am  Player.py  Plugins.py.in  Preferences.py  Queue.py  Share.py  Share.py.in  Translator.py.in  Validator.py  about.py.in  christine.py.in  clibrary.c  discoverer.py  display.py  gst_base.py  gtk_misc.py  gtk_misc.py.in  library.py  libs_christine.py  libs_christine.py.in  libs_christine.py_orig  player.py  plugins.py.in  preferences.py  queue.py  show_properties.py  sources_list.py  trans.py.in
lib_christine/pattern/: Singleton.py
libchristine/: .Christine.py.in.swp  .Plugins.py.swp  .Share.py.swp  About.py  About.py.in  BugReport.py  CLibraryModel.c  CLibraryModel.h  Christine.py  Christine.py.in  ChristineCore.py  ChristineDefinitions.py  ChristineDefinitions.py.in  ChristineGConf.py  ChristineObject.py  Discoverer.py  Dispatcher.py  Display.py  Events.py  GstBase.py  GtkMisc.py  GtkMisc.py.in  Library.py  LibraryModel.py  Logger.py  Makefile  Makefile.am  Makefile.in  Player.py  Plugins.py  Plugins.py.in  Preferences.py  Queue.py  Queue_1.py  Sanity.py  Share.py  Share.py.in  Tagger.py  Translator.py  Validator.py  (+18 more)
libchristine/Plugins/: Makefile  Makefile.am  Makefile.in  __init__.py  albumCover.py  christinePyNotify.py  getImage.py  gnomeDBus.py  lastfm.py  pidgin.py  plugin_base.py  trayicon.py  tryicon.py  twitter.py
libchristine/Plugins/Player/: Makefile.am
libchristine/Plugins/albumCover/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/christinePyNotify/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/getInfo/: Makefile  Makefile.am  Makefile.in  __init__.py  getInfo.py
libchristine/Plugins/gnomeDBus/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/lastfm/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/pidgin/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/trayicon/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/twitter/: Makefile.am  __init__.py
libchristine/Plugins/webservices/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/Plugins/webservices/glade/: Makefile  Makefile.am  Makefile.in  configure.glade
libchristine/Storage/: ChristineGConf.py  LibraryToFile.py  Makefile  Makefile.am  Makefile.in  sqlitedb.py
libchristine/c3rdparty/: Makefile  Makefile.am  Makefile.in  __init__.py  pylast.py
libchristine/christine_dbus/: Makefile  Makefile.am  Makefile.in  __init__.py
libchristine/gui/: About.py  BugReport.py  Display.py  GtkMisc.py  Makefile  Makefile.am  Makefile.in  Preferences.py  Volume.c  __init__.py  buttons.py  christineNotify.py  equalizer.py  keyvals.py  mainWindow.py  openRemote.py
libchristine/pattern/: Makefile  Makefile.am  Makefile.in  Singleton.py
libchristine/podcast/: .__init__.py.swp  __init__.py
m4/: ChangeLog  ac_python_devel.m4
po/: ChangeLog  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  ar.po  be.po  bg.po  br.po  ca.gmo  ca.po  christine.pot  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.po  es_ES.gmo  es_ES.po  eu.gmo  eu.po  fi.po  fr.gmo  fr.po  ga.po  he.po  hu.gmo  hu.po  id.po  it.gmo  it.po  lv.po  (+19 more)
win32resources/: Makefile.am  christine.nsi  christine_setup.py
